fixed wrong color on changing text bug

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 }
 
 #changingText {
-  color: #855e42;
+  color: #3eb489;
   border-right: 1px solid black;
   animation: cursoranim 1s linear infinite;
 }
